objects/Renewal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <label>Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_PO_Number__c</fullName>
        <label>Client PO Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Number__c</fullName>
        <label>Deal Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Digital_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Digital Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_List_Price__c</fullName>
        <formula>List_Price__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notice_Due_Date__c</fullName>
        <formula>Renewal_Date__c - 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Renewal Line Items</relationshipLabel>
        <relationshipName>Renewal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Rejection__c</fullName>
        <label>Reason_Rejection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Quote__c</fullName>
        <label>Renewal Quote</label>
        <referenceTo>Renewal_Quote__c</referenceTo>
        <relationshipLabel>Renewal Line Items</relationshipLabel>
        <relationshipName>Renewal_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAP_Quote_Num_and_Line_Num__c</fullName>
        <label>SAP Quote Num and Line Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Renewal Line Item</label>
    <nameField>
        <displayFormat>RLI-{0000000}</displayFormat>
        <label>Renewal Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>